feat: record script added
