# docs/swagger.json
@@ -30,6 +30,12 @@
                         "description": "get by name",
                         "name": "name",
                         "in": "query"
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "get for record values",
+                        "name": "dump",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -59,6 +65,45 @@
                     },
                     "404": {
                         "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/apimodels.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/apimodels.Error"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Send and record auth",
+                "tags": [
+                    "auth"
+                ],
+                "summary": "New or Update auth",
+                "parameters": [
+                    {
+                        "description": "send auth object",
+                        "name": "payload",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/models.AuthPure"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "400": {
+                        "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/apimodels.Error"
                         }
@@ -334,8 +379,14 @@
                     },
                     {
                         "type": "boolean",
-                        "description": "get content",
+                        "description": "not get content",
                         "name": "nodata",
+                        "in": "query"
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "get for record values",
+                        "name": "dump",
                         "in": "query"
                     }
                 ],
@@ -366,6 +417,45 @@
                     },
                     "404": {
                         "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/apimodels.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/apimodels.Error"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Send and record control",
+                "tags": [
+                    "control"
+                ],
+                "summary": "New or Update control",
+                "parameters": [
+                    {
+                        "description": "send control object",
+                        "name": "payload",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/models.ControlPureContent"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "400": {
+                        "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/apimodels.Error"
                         }
@@ -850,6 +940,12 @@
                         "description": "get by name",
                         "name": "name",
                         "in": "query"
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "get raw content",
+                        "name": "dump",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -891,6 +987,61 @@
                     }
                 }
             },
+            "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Send and record template",
+                "consumes": [
+                    "text/plain"
+                ],
+                "tags": [
+                    "template"
+                ],
+                "summary": "New or Update template",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "name of file 'deepcore/template1'",
+                        "name": "name",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "group names 'group1,group2'",
+                        "name": "groups",
+                        "in": "query"
+                    },
+                    {
+                        "description": "send template object",
+                        "name": "payload",
+                        "in": "body",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/apimodels.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/apimodels.Error"
+                        }
+                    }
+                }
+            },
             "post": {
                 "security": [
                     {
@@ -912,6 +1063,12 @@
                         "name": "name",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "group names 'group1,group2'",
+                        "name": "groups",
+                        "in": "query"
                     },
                     {
                         "description": "send template object",
@@ -1061,6 +1218,12 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/apimodels.Error"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/apimodels.Error"
                         }
@@ -2117,6 +2280,9 @@
                 },
                 "host": {
                     "type": "string"
+                },
+                "no_auth": {
+                    "type": "boolean"
                 },
                 "password": {
                     "type": "string"
